Fixed booking box alignment

--- a/sass/layout/_booking-box.scss
+++ b/sass/layout/_booking-box.scss
@@ -100,7 +100,7 @@
 
   .option {
     width: 100%;
-    height: 35px;
+    min-height: 50px;
     padding: 10px 0;
     vertical-align: middle;
   }
@@ -109,6 +109,7 @@
     float: left;
     line-height: 25px;
     display: inline-block;
+    max-width: 150px; 
   }
 
   .option-price, 
