--- a/sass/pages/experiences/experience-detail.scss
+++ b/sass/pages/experiences/experience-detail.scss
@@ -80,12 +80,16 @@
       padding-top: 15px;
       padding-right: 440px;
     }
+    h5 {
+      padding-top: 15px;
+      padding-right: 440px;
+    }
     ul {
       margin-bottom: 15px;
       margin-top: -45px;
       padding: 15px 0 15px 150px;
     }
-    p {
+   > p {
       margin-bottom: 15px;
       margin-top: -45px; 
       padding: 15px 0 15px 135px;
